--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <form action="" method="get"> 
             <div class="input-log">
                 <label for="nombre" class="label">Usuario:</label>
-                <input type="text" id="nombre" placeholder="Ingrese el usuario:">
+                <input type="text" id="usuario" placeholder="Ingrese el usuario:">
             </div>
             <div class="input-log">
                 <label for="pass" class="label">Password:</label>
@@ -22,12 +22,13 @@
             </div>
 
             <!--Borrar este boton provicional-->
-            <a href="/HTML/index.html">Ingresar</a>
-
+            <a onclick="validar()">Ingresar</a>
+            
             <!--Reponer este boton despues-->
              <!-- <input id="ingresar-log" type="submit" value="Ingresar"></form>-->
         </form>
-      
     </main>
+
+    <script src="/JS/script.js"></script>
 </body>
 </html>
