--- a/app/HTML/index.html
+++ b/app/HTML/index.html
@@ -7,7 +7,7 @@
     <title>Nombre consultorio</title>
     <link rel="stylesheet" href="/CSS/styles.css">
 </head>
-<body onload="mostrarFecha()">
+<body onload="obtenerCitasMain()">
 
     <header class="header">
         <img src="/IMG/logo index.png" alt="logo-consultorio.png">
@@ -23,20 +23,6 @@
                     <th>Apellido Materno</th>
                     <th>Cita</th>
                     <th>Datos Paciente</th>
-                </tr>
-                <tr>
-                    <td>Octavio</td>
-                    <td>Ortiz</td>
-                    <td>Diaz</td>
-                    <td>13:00 <input id="modificar-cita" type="submit" value="Modificar"></form></td>
-                    <td><input id="modificar-datos" type="submit" value="Visualizar Datos"></form></td>
-                </tr>
-                <tr>
-                    <td>Alejandro</td>
-                    <td>Galicia</td>
-                    <td>Ceron</td>
-                    <td>11:00 <input id="modificar-cita" type="submit" value="Modificar"></form></td>
-                    <td><input id="modificar-datos" type="submit" value="Visualizar Datos"></form></td>
                 </tr>
             </table>
         </main>
