--- a/app/HTML/ver-datos.html
+++ b/app/HTML/ver-datos.html
@@ -14,8 +14,9 @@
     </header>
 
     <section class="search">
-        <input type="search" placeholder="Ingrese nombre a buscar">
-        <input type="submit" value="Buscar">
+        <input type="search" placeholder="Ingrese nombre a buscar" id="txtBuscar">
+        <input type="button" value="Buscar" onclick="filtrarNombre()">
+        &backepsilon;<input type="button" id="btnRemoverFiltro" value="Limpiar Filtro" onclick="removerFiltroNombre()" disabled>
     </section>
 
     <table class="datos-clientes">
