Se añade botón con mensaje de cerrar sesión

--- a/app/HTML/index.html
+++ b/app/HTML/index.html
@@ -46,6 +46,10 @@
             </div>
         </section>
     </div>
+    
+     <div class="boton-regreso">
+        <a onclick="cerrarSesion()" href="/HTML/Login.html">Cerrar Sesión</a>
+    </div>
 
 <script src="/JS/script.js"></script>
 </body>
