Se actualiza error de boton "cerrar sesion"

--- a/app/HTML/index.html
+++ b/app/HTML/index.html
@@ -46,6 +46,10 @@
             </div>
         </section>
     </div>
+    
+    <div class="boton-regreso">
+        <a onclick="cerrarSesion()" href="https://happy-flower-0df9e2710.1.azurestaticapps.net">Cerrar Sesión</a>
+    </div>
 
 <script src="/JS/script.js"></script>
 </body>
